# jobs-ai-exposure

./: .gitignore  ANALYSIS.md  CODEX_PROMPTS.md  README.md  README_codex.md  TASKS.md  build_industry_exposure.py  build_site_data.py  industry_exposure.csv  industry_exposure.json  make_csv.py  occupations.csv  parse_detail.py  pyproject.toml  render_site_pngs.py  score.py  scores_gpt54.json
data/exports/: industry_exposure_4digit.csv  industry_exposure_4digit.json
data/source/comparison/: TBL_Data_AI_Exposure_What_do_we_know_202602_Updated.xlsx  genaiexp_estz_firmscores.csv  genaiexp_estz_occscores.csv  nem_occupational_coverage.xlsx  nem_onet_to_soc_crosswalk.xlsx
data/source/html/: accountants-and-auditors.html  actors.html  actuaries.html  administrative-services-managers.html  adult-literacy-and-ged-teachers.html  advertising-promotions-and-marketing-managers.html  advertising-sales-agents.html  aerospace-engineering-and-operations-technicians.html  aerospace-engineers.html  agricultural-and-food-science-technicians.html  agricultural-and-food-scientists.html  agricultural-engineers.html  agricultural-workers.html  air-traffic-controllers.html  announcers.html  (+327 more)
scripts/: build_industry_exposure.py  compare_industry_exposure.py  compare_occupation_exposure.py  comparison_config.py  comparison_utils.py  download_comparison_data.py  make_csv.py  parse_detail.py  parse_occupations.py  paths.py  plot_comparison_correlations.py  process.py  score.py  score_gabriel.py  scrape.py  summarize_comparison_measures.py
site/: changes.html  changes.json  data.json  index.html
(+85 files in other folders)
