[project]
name = "jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.6",
    "openai-gabriel>=1.1.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.16.2",
    "wheel>=0.45.1",
]
